--- a/src/partials/gobierno/2_pol_corp.html
+++ b/src/partials/gobierno/2_pol_corp.html
@@ -22,7 +22,7 @@
           target="_blank"
         >
           <div>
-            <b>Código de buen gobierno</b>
+            <b>Código de buen gobierno Grupo Sura y Anexo ASULADO</b>
             <span> PDF 125 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
@@ -34,7 +34,7 @@
           target="_blank"
         >
           <div>
-            <b>Código de conducta grupo Sura - Anexo ASULADO</b>
+            <b>Código de conducta Grupo Sura y Anexo ASULADO</b>
             <span> PDF 125 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
@@ -58,19 +58,7 @@
           target="_blank"
         >
           <div>
-            <b>Código de Ética y Conducta</b>
-            <span> PDF 125 kb </span>
-          </div>
-          <i class="itc fa-light fa-cloud-arrow-down"></i>
-        </a>
-      </li>
-      <li class="as__desc_item">
-        <a
-          href="https://www.asulado.com/wp-content/uploads/2022/01/Politica-de-Administracion-de-Riesgos-ASULADO-Seguros-de-Vida.pdf"
-          target="_blank"
-        >
-          <div>
-            <b>Políticas de Administración y Control del Riesgo</b>
+            <b>Política de administración y control del riesgo LAFT</b>
             <span> PDF 125 kb </span>
           </div>
           <i class="itc fa-light fa-cloud-arrow-down"></i>
@@ -83,8 +71,8 @@
         >
           <div>
             <b
-              >Política para la Gestión del Riesgo del Fraude, Soborno y
-              Corrupción</b
+              >Política para la gestión del riesgo de fraude, soborno y
+              corrupción</b
             >
             <span> PDF 125 kb </span>
           </div>
