--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -411,3 +411,13 @@
     </div>
   </button>
 </div>
+
+<a
+  class="as_usability"
+  role="button"
+  onclick="window.interdeal.a11y.openMenu()"
+  href="#"
+  aria-current="page"
+  title="Usabilidad"
+  ><i role="presentation" class="fa-solid fa-universal-access"></i
+></a>
