--- a/src/partials/documentos.html
+++ b/src/partials/documentos.html
@@ -151,7 +151,7 @@
           <div class="as__documentos_int_content">
             <h2>Gestión de documentos</h2>
             <p>Conoce cómo gestionar tus certificados y novedades.</p>
-            <a href="/nuestra_empresa" class="as__button small">
+            <a href="/gestion_documentos" class="as__button small">
               <span>INGRESA AQUÍ</span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
             </a>
@@ -163,7 +163,11 @@
           <div class="as__documentos_int_content">
             <h2>Calendario de pagos</h2>
             <p>Conoce la fecha de pago de tu mesada pensional.</p>
-            <a href="/nuestra_empresa" class="as__button small">
+            <a
+              href="/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf"
+              class="as__button small"
+              target="_blank"
+            >
               <span>INGRESA AQUÍ</span>
               <i role="presentation" class="fa-light fa-arrow-right"></i>
             </a>
