--- a/src/partials/faqs/faq_1.html
+++ b/src/partials/faqs/faq_1.html
@@ -3,10 +3,7 @@
   <ol class="fqs">
     <li class="fqs_list">
       <div class="fqs_list_int">
-        <h4>
-          ¿Por qué nace una nueva compañía como ASULADO Seguros de Vida Seguros
-          de vida?
-        </h4>
+        <h4>¿Por qué nace una nueva compañía como ASULADO Seguros de Vida?</h4>
         <div class="fqs_info">
           <p>
             Somos ASULADO Seguros de Vida, una filial de SURA Asset Management.
@@ -18,12 +15,11 @@
             Además de complementar el sistema pensional en Colombia, existimos
             para ofrecer bienestar, tranquilidad, innovación y acompañamiento a
             miles de colombianos, a través de la gestión de activos y
-            administración de productos de desacumulación patrimonial
-            garantizados, como son las soluciones de rentas vitalicias y de
-            seguros previsionales.
+            administración de productos de desacumulación patrimonial , como son
+            las soluciones de Rentas Vitalicias y Seguros Previsionales.
           </p>
           <p>
-            Miramos el futuro con optimismo, responsabilidad y sostenibilidad. Y
+            Miramos el futuro con optimismo, responsabilidad y sostenibilidad y
             seremos tu aliado para transformar esfuerzos de vida en beneficios
             garantizados que generan tranquilidad y libertad.
           </p>
