--- a/src/partials/faqs/faq_2.html
+++ b/src/partials/faqs/faq_2.html
@@ -11,7 +11,7 @@
             En ASULADO Seguros de Vida tu Renta Vitalicia es una póliza y no una
             cuenta de ahorro individual, cuando el pensionado o el último de sus
             beneficiarios fallece o se dejan de cumplir con los requisitos
-            establecidos por la Ley, y, además, no existen otros beneficiarios
+            establecidos por la ley, y además no existen otros beneficiarios
             para sustituir el derecho a la pensión, la póliza se finaliza y el
             capital no será heredable.
           </p>
@@ -53,12 +53,14 @@
             <a
               href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf"
               target="_blank"
+              class="underline text-azul-bold font-bold underline-offset-2"
               >ingresando aquí</a
             >. Adicional, recuerda diligenciar la solicitud de sustitución
             pensional
             <a
               href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf"
               target="_blank"
+              class="underline text-azul-bold font-bold underline-offset-2"
               >descarga aquí</a
             >.
           </p>
@@ -110,7 +112,7 @@
     <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
-          Si soy pensionado por invalidez y llegara a faltar, ¿qué pasaría con
+          Si soy pensionado por invalidez y llegara a fallecer, ¿qué pasaría con
           los beneficiarios de mi pensión?
         </h4>
         <div class="fqs_info">
@@ -126,7 +128,7 @@
             seguirán recibiendo la mesada pensional. Lo anterior aplicaría para
             los beneficiarios hijos entre los 18 a 25 años, que acrediten la
             calidad de estudiantes y si los hijos se encuentran en condición de
-            invalidez tendrán derecho de manera vitalicia. Y esta mesada se
+            invalidez tendrán derecho de manera vitalicia. Esta mesada se
             incrementará cada año según el IPC o el salario mínimo.
           </p>
         </div>
