--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -11,16 +11,19 @@
           <p>
             ASULADO Seguros de Vida te envía, al correo registrado en nuestro
             sistema, este documento de manera anticipada en el primer trimestre
-            del año. Si no lo recibiste, puedes solicitarlo de dos maneras: 
+            del año. Si no lo recibiste, puedes solicitarlo de dos maneras:
           </p>
           <ul>
             <li>
-              A través de nuestra página web, sección ´Solicitudes y
-              Peticiones’, diligencias tema: certificado o colilla; detalle:
-              certificado de ingresos y retenciones- declaración renta. La
-              respuesta te llegará al correo que tienes registrado en nuestra
-              compañía. Haz clic aquí para realizarlo. (https://www.ASULADO
-              Seguros de Vida.com/Solicitudes_ASULADO Seguros de Vida)
+              A través de nuestra página web, en la sección
+              <a
+                href="/solicitudes"
+                title="Solicitudes"
+                class="underline text-azul-bold font-bold underline-offset-2"
+                >“Solicitudes”</a
+              >, diligencias tema: certificado o colilla. detalle: certificado
+              de ingresos y retenciones- declaración renta. La respuesta te
+              llegará al correo que tienes registrado en nuestra compañía.
             </li>
             <li>
               También puedes comunicarte a nuestra línea de atención a nivel
@@ -37,7 +40,23 @@
         <div class="fqs_info">
           <p>Existen dos formas para hacer la solicitud:</p>
           <ul>
-            <li>Certificado de estudio</li>
+            <li>
+              A través de nuestra página web, en la sección
+              <a
+                href="/solicitudes"
+                title="Solicitudes"
+                class="underline text-azul-bold font-bold underline-offset-2"
+                >“Solicitudes”</a
+              >, diligencias tema: certificado o colilla. Detalle: colilla de
+              pago del pensionado. La respuesta te llegará al correo que tienes
+              registrado en nuestra compañía.
+            </li>
+            <li>
+              También puedes comunicarte a nuestras líneas de atención a nivel
+              nacional 018000 412 854 y en Medellín al (604) 4026876, donde te
+              brindaremos asesoría y respuesta a tu solicitud.
+            </li>
+            <!-- <li>Certificado de estudio</li>
             <li>Certificado de cuenta bancaria</li>
             <li>Documento de identidad actualizado</li>
             <li>Certificado de la EPS donde te encuentras afiliado</li>
@@ -55,7 +74,7 @@
               donde se validar&aacute; la identidad del solicitante y se
               proceder&aacute; con la recepci&oacute;n de la
               documentaci&oacute;n indicada para el ingreso de la solicitud.
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -73,17 +92,41 @@
             <a
               href="/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf"
               target="_blank"
+              class="underline text-azul-bold font-bold underline-offset-2"
               >ingresando aquí</a
             >. Adicional, recuerda diligenciar la solicitud de sustitución
             pensional
             <a
               href="/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf"
               target="_blank"
+              class="underline text-azul-bold font-bold underline-offset-2"
               >descarga aquí</a
             >.
           </p>
           <ul>
+            <li>Certificado de estudio</li>
+            <li>Certificado de cuenta bancaria</li>
+            <li>Documento de identidad actualizado</li>
+            <li>Certificado de la EPS donde te encuentras afiliado</li>
+            <li>Para hacer la entrega de esta documentaci&oacute;n, puedes:</li>
             <li>
+              Ingresar a nuestra página web, sección
+              <a
+                href="/solicitudes"
+                title="Solicitudes"
+                class="underline text-azul-bold font-bold underline-offset-2"
+                >“Solicitudes”</a
+              >, allí radicarás la solicitud y la respuesta te llegará al correo
+              que tienes registrado en nuestra compañía.
+            </li>
+            <li>
+              Comunicarte a nuestras l&iacute;neas de atenci&oacute;n a nivel
+              nacional 018000 412 854 y en Medell&iacute;n al (604) 4026876,
+              donde se validar&aacute; la identidad del solicitante y se
+              proceder&aacute; con la recepci&oacute;n de la
+              documentaci&oacute;n indicada para el ingreso de la solicitud.
+            </li>
+            <!-- <li>
               A través de nuestra página web, sección ´Solicitudes o
               Peticiones’, diligencias tema: certificado o colilla; detalle:
               colilla de pago del pensionado. La respuesta te llegará al correo
@@ -94,12 +137,12 @@
               También puedes comunicarte a nuestras líneas de atención a nivel
               nacional 018000 412 854 y en Medellín al (604) 4026876, donde te
               brindaremos asesoría y respuesta a tu solicitud.
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </li>
-    <li class="fqs_list">
+    <!-- <li class="fqs_list">
       <div class="fqs_list_int">
         <h4>
           Si fallezco, ¿ASULADO Seguros de Vida cubriría los gastos fúnebres?
@@ -113,6 +156,6 @@
           </p>
         </div>
       </div>
-    </li>
+    </li> -->
   </ol>
 </li>
