--- a/src/partials/faqs/faq_4.html
+++ b/src/partials/faqs/faq_4.html
@@ -86,7 +86,7 @@
         <div class="fqs_info">
           <p>
             Si tu mesada pensional es superior al salario mínimo, se ajustará
-            conforme al incremento del porcentaje del IPC; y si tu mesada es de
+            conforme al incremento del porcentaje del IPC y si tu mesada es de
             un salario mínimo se incrementa de acuerdo con lo decretado por el
             Gobierno Nacional para este, según el Artículo 14 de la Ley 100 de
             1993.
@@ -132,8 +132,8 @@
           </p>
           <p>
             Es importante precisar que, la pensión se causa u origina cuando se
-            cumplen todos los requisitos para acceder a ella, aun cuando no se
-            haya iniciado el reconocimiento o pago de la pensión.  
+            cumplen todos los requisitos para acceder a ella, incluso cuando no
+            se haya iniciado el reconocimiento o pago de la pensión.  
           </p>
         </div>
       </div>
@@ -144,30 +144,30 @@
         <div class="fqs_info">
           <p>
             Puedes obtener toda la información en tu colilla de pago, la cual
-            puedes solicitar mensualmente de la siguiente manera: 
+            puedes solicitar mensualmente de la siguiente manera:
           </p>
+
           <ul>
             <li>
               Inscribiéndote al servicio de envío de colillas de pago, de esta
-              manera la recibirás mensualmente sin necesidad de comunicarte con
-              nosotros o radicar una PQRS, para hacerlo solo debes comunicarte a
+              manera la recibirás mensualmente. Para hacerlo puedes ingresar a
+              nuestro servicio de suscripción haciendo clic aquí o llamando a
               nuestra línea de atención a nivel nacional 018000 412 854 y en
               Medellín al (604) 4026876, donde te brindaremos asesoría y
               respuesta a tu solicitud.
             </li>
             <li>
-              Radicando una PQRS a través de nuestra página web, sección
-              ´Solicitudes y Peticiones’, diligencias tema: certificado o
-              colilla; detalle: colilla de pago del pensionado. La respuesta te
-              llegará al correo que tienes registrado en nuestra compañía. Haz
-              clic aquí para realizarlo. (https://www.ASULADO
+              Radicando una PQRS a través de nuestra página web en la sección
+              ´Solicitudes’. Diligencias tema: certificado o colilla. Detalle:
+              colilla de pago del pensionado.<br /><br />La respuesta te llegará
+              al correo que tienes registrado en nuestra compañía.
             </li>
-            <li>
+            <!-- <li>
               Seguros de Vida.com/Solicitudes_ASULADO Seguros de Vida) <br />También
               puedes solicitarla comunicándote a nuestra línea de atención a
               nivel nacional 018000 412 854 y en Medellín al (604) 4026876,
               donde te brindaremos asesoría y respuesta a tu solicitud.
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
