--- a/src/partials/faqs/faq_5.html
+++ b/src/partials/faqs/faq_5.html
@@ -17,8 +17,8 @@
             <thead>
               <tr>
                 <th>
-                   Mesada pensional en salarios mínimos legales mensuales
-                  vigentes (SMLMV)
+                   Mesada pensional en Salarios Mínimos Legales Mensuales
+                  Vigentes (SMLMV)
                 </th>
                 <th>Cotización mensual en salud </th>
               </tr>
@@ -54,16 +54,15 @@
         <h4>¿Cómo me puedo trasladar de EPS?</h4>
         <div class="fqs_info">
           <p>
-            El pensionado debe acercarse a la entidad promotora de salud (EPS) a
-            la que quiere trasladarse, una vez sea aprobada su afiliación por
-            parte de la EPS, el pensionado debe informar y aportar este
-            certificado a ASULADO Seguros de Vida.
+            Debes acercarte a la entidad promotora de salud (EPS) a la que
+            quieres trasladarte y una vez sea aprobada tu afiliación debes
+            informarnos y compartirnos este certificado.
           </p>
           <p>
             Recuerda la importancia de mantener tus datos actualizados, puedes
-            hacerlo a través de la sección Solicitudes o Peticiones, ingresando
-            aquí o comunícate a nuestras líneas de atención a nivel nacional
-            018000 412 854 y en Medellín al (604) 4026876.
+            hacerlo a través de la sección Solicitudes o comunicándote a
+            nuestras líneas de atención a nivel nacional 018000 412 854 y en
+            Medellín al (604) 4026876.
           </p>
         </div>
       </div>
