--- a/src/partials/faqs/faq_6.html
+++ b/src/partials/faqs/faq_6.html
@@ -33,7 +33,7 @@
             Debes tener presente que para aplicar el descuento en la mesada
             pensional, la entidad debe estar registrada como operadora de
             libranza en el Registro Único Nacional de Entidades Operadoras de
-            Libranza (RUNEOL), el cual puedes consultar aquí.
+            Libranza (RUNEOL).
           </p>
           <p>
             La entidad se encarga de enviar la información a ASULADO Seguros de
