--- a/src/partials/gestion/tabs_content.html
+++ b/src/partials/gestion/tabs_content.html
@@ -25,7 +25,7 @@
       <li>
         Ingresa a la sección de
         <a class="bt v_azul" target="_blank" href="/solicitudes"
-          >SOLICITUDES O PETICIONES</a
+          >"SOLICITUDES"</a
         >
         donde podrás radicar una PQRS con tu solicitud.
       </li>
