--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -103,7 +103,7 @@
                   <p>
                     Es la garantía que tienen todos los cotizantes pensionados
                     anticipadamente por invalidez o fallecimiento, para hacer su
-                    ahorro efectivo.
+                    ahorro efectivo
                   </p>
                 </div>
                 <i class="fa-duotone fa-circle-arrow-right"></i>
