--- a/src/partials/home/servicios.html
+++ b/src/partials/home/servicios.html
@@ -1,7 +1,7 @@
 <section id="home_servicios" class="as__section as_servicios">
   <div class="as__section_wrapper">
     <div class="as__section_content">
-      <h3 class="as__title_section">Servicios</h3>
+      <h3 class="as__title_section">Productos</h3>
       <div class="as__servicios_wrapper">
         <div class="as__servicios_item as_servicios_rent serv_renta">
           <div class="as__servicios_image img_renta">
@@ -11,10 +11,13 @@
             <h2><span>Renta</span> <b>Vitalicia</b></h2>
             <p>
               Modalidad de pensión que se contrata con una Aseguradora de Vida,
-              en la cual los pensionados reciben de forma periódica el pago de
-              su renta pensional siempre que cumplan los requisitos establecidos
-              en la normatividad vigente. Una renta vitalicia te ofrece
-              tranquilidad y libertad.
+              en la cual los
+              <b
+                >pensionados reciben de forma periódica el pago de su renta
+                pensional</b
+              >
+              siempre que cumplan los requisitos establecidos en la normatividad
+              vigente. Una renta vitalicia te ofrece tranquilidad y libertad.
             </p>
           </div>
           <a href="/renta_vitalicia" class="as__button">
@@ -34,10 +37,12 @@
               ante los riesgos de invalidez y fallecimiento.
             </p>
             <p>
-              Su propósito es completar el capital de su cuenta de ahorro
-              individual para que el afiliado o su grupo familiar accedan a la
-              pensión, ya sea por una situación de invalidez o fallecimiento del
-              afiliado.
+              <b
+                >Su propósito es completar el capital de su cuenta de ahorro
+                individual</b
+              >
+              para que el afiliado o su grupo familiar accedan a la pensión, ya
+              sea por una situación de invalidez o fallecimiento del afiliado.
             </p>
           </div>
           <a href="/seguro_previsional" class="as__button">
