--- a/src/partials/renta_sobrevivencia/destacados.html
+++ b/src/partials/renta_sobrevivencia/destacados.html
@@ -17,7 +17,7 @@
             </p>
           </div>
           <a href="/pension_sobreviviencia" class="as__button">
-            <span>INGRESA AQUÍ PARA MÁS INFORMACIÓN</span>
+            <span>MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
@@ -37,7 +37,7 @@
             </p>
           </div>
           <a href="/pension_invalidez" class="as__button">
-            <span>INGRESA AQUÍ PARA MÁS INFORMACIÓN</span>
+            <span>MÁS INFORMACIÓN</span>
             <i role="presentation" class="fa-light fa-arrow-right"></i>
           </a>
         </div>
