--- a/src/partials/renta_vitalicia/que_es.html
+++ b/src/partials/renta_vitalicia/que_es.html
@@ -12,7 +12,7 @@
 
         <div class="as__que_es_content">
           <p class="prop_anim">
-            Modalidad de pensión que se contrata con una Aseguradora de vida, en
+            Modalidad de pensión que se contrata con una Aseguradora de Vida, en
             la cual
             <b
               >los pensionados reciben de forma periódica el pago de su renta
@@ -30,7 +30,6 @@
             tranquilidad y libertad.
           </p> -->
 
-          
           <p class="prop_anim">
             <b>Conoce las condiciones generales del producto</b>
           </p>
