--- a/src/partials/rv_invalidez/gestion.html
+++ b/src/partials/rv_invalidez/gestion.html
@@ -21,7 +21,7 @@
         <div class="as__gestion_content">
           <p>
             Suscríbete ahora y recibe la información más importante directamente
-            en tu correo electrónico
+            en tu correo electrónico.
           </p>
           <a href="/suscribete" class="as__button prop_anim">
             <span>SUSCRIBIRME AHORA</span>
