--- a/src/partials/seguro_previsional/destacados.html
+++ b/src/partials/seguro_previsional/destacados.html
@@ -19,10 +19,10 @@
             </p>
             <p class="text-sm">
               * Sin que el valor de este auxilio sea inferior a cinco (5)
-              salarios mínimos legales mensuales vigentes, ni superior a diez
-              (10) veces dicho salario, a la fecha del fallecimiento del
-              pensionado. Por la muerte del (los) beneficiario (s)
-              sobrevivientes de una pensión, no se reconocerá auxilio funerario.
+              Salarios Mínimos Legales Vigentes, ni superior a diez (10) veces
+              dicho salario, a la fecha del fallecimiento del pensionado. Por la
+              muerte del (los) beneficiario (s) sobrevivientes de una pensión,
+              no se reconocerá auxilio funerario.
             </p>
           </div>
         </div>
