--- a/src/partials/seguro_previsional/gestion.html
+++ b/src/partials/seguro_previsional/gestion.html
@@ -15,9 +15,9 @@
         <div class="as__gestion_content">
           <p>
             Lo hace directamente las
-            <b>Administradoras de Fondos de Pensiones</b> para cubrir y proteger
-            a sus afiliados, pensionados y beneficiarios (pareja, hijos,
-            padres).
+            <b>Administradoras de Fondos de Pensiones (AFP)</b> para cubrir y
+            proteger a sus afiliados, pensionados y beneficiarios (pareja,
+            hijos, padres).
           </p>
         </div>
       </div>
