--- a/src/partials/seguro_previsional/listado.html
+++ b/src/partials/seguro_previsional/listado.html
@@ -787,9 +787,10 @@
         <div class="as__listado_content">
           <h3 class="extra_title prop_anim">Reclamaciones a tu AFP</h3>
           <p class="prop_anim">
-            Las reclamaciones de invalidez, sobrevivencia e incapacidad temporal
-            deben ser gestionadas directamente en el fondo de pensiones en el
-            cual estás afiliado. Estamos aquí para ayudarte en el proceso.
+            Las reclamaciones a tu Administradora de Fondos de pensiones (AFP)
+            de invalidez, sobrevivencia e incapacidad temporal deben ser
+            gestionadas directamente en el fondo de pensiones en el cual estás
+            afiliado. Estamos aquí para ayudarte en el proceso.
           </p>
           <p class="prop_anim">
             <b
@@ -803,13 +804,13 @@
                 href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
                 target="_blank"
               >
-                <span>Seguro previsional 2023.</span>
+                <span>Seguro previsional</span>
                 <i class="fa-solid fa-external-link"></i>
               </a>
             </li>
             <li>
               <a
-                href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
+                href="https://www.proteccion.com/portalafiliados/afiliados/seguimiento-pension/"
                 target="_blank"
               >
                 <span>Seguimiento a mi solicitud de pensión</span>
@@ -818,7 +819,7 @@
             </li>
             <li>
               <a
-                href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
+                href="https://www.proteccion.com/portalafiliados/afiliados/adjuntarincapacidad/"
                 target="_blank"
               >
                 <span>Adjuntar mi incapacidad</span>
@@ -827,7 +828,7 @@
             </li>
             <li>
               <a
-                href="https://www.proteccion.com/contenidos/persona/pension/seguro-previsional"
+                href="https://www.proteccion.com/recepcionDocumentos/"
                 target="_blank"
               >
                 <span>Adjuntar documentos otros trámites</span>
