--- a/src/partials/solicitudes/info_form copy.html
+++ b/src/partials/solicitudes/info_form copy.html
@@ -9,14 +9,14 @@
         </h4>
       </div>
       <p>
-        En Asulado estamos atentos al seguimiento de tus solicitudes. Si
+        En ASULADO estamos atentos al seguimiento de tus solicitudes. Si
         previamente radicaste una solicitud y quieres conocer su avance, no es
         necesario que la radiques de nuevo. Diligencia el siguiente formulario y
         consulta tu PQRS
       </p>
       <p>
         <b
-          >¡Recuerda que también estamos a una llamada de distancia! comunícate
+          >¡Recuerda que también estamos a una llamada de distancia! Comunícate
           en la línea gratuita nacional 01 8000 412 854 o al (604) 402 68 76 si
           te encuentras en Medellín. También puedes contactarnos a través de
           nuestro correo electrónico info@asulado.com.co</b
