--- a/src/partials/solicitudes/tabs.html
+++ b/src/partials/solicitudes/tabs.html
@@ -1,7 +1,7 @@
-<section class="as__section as__g_documentos_tabs">
+<section class="as__section as__g_documentos_tabs {{cls}}">
   <div class="as__section_wrapper full">
     <div class="as__section_content_full as__g_documentos_tabs_int">
-      <h2>¿Qué tipo de solicitud puedes realizar?</h2>
+      <h2>¿Qué tipo de PQRS puedes realizar?</h2>
 
       <ul class="as__doc_tabs_info">
         <li>
