--- a/src/partials/renta_sobrevivencia/gestion.html
+++ b/src/partials/renta_sobrevivencia/gestion.html
@@ -15,7 +15,7 @@
         <div class="as__gestion_content">
           <ul>
             <li class="prop_anim">
-              <b>La Administradora de Fondos de Pensiones</b> mediante el
+              <b>La Administradora de Fondos de Pensiones (AFP)</b> mediante el
               monitoreo de las cuentas de sus pensionados y cuando las mesadas
               son cercanas al valor del Salario Mínimo Legal Mensual Vigente,
               tiene la obligación de cotizar y contratar la Renta Vitalicia con
@@ -28,7 +28,7 @@
               comercialice dicho producto.
             </li>
             <li class="prop_anim">
-               <b>Los afiliados a un Fondo de Pensiones</b> que cumplen las
+              <b>Los afiliados a un Fondo de Pensiones</b> que cumplen las
               condiciones para comenzar a recibir el pago de su pensión por
               vejez o invalidez y/o los beneficiarios del afiliado fallecido que
               cumplen los requisitos de una pensión de sobrevivencia.
