--- a/src/layouts/layout.html
+++ b/src/layouts/layout.html
@@ -88,6 +88,9 @@
     <div class="as__header_vigilado">
       <img src="/assets/images/vigilado_vert.png" alt="Vigilado" />
     </div>
+    <div class="as__header_asulado">
+      <img src="/assets/images/asulado_disc.png" alt="Vigilado" />
+    </div>
     <include src="footer.html"></include>
     <script
       type="text/javascript"
