--- a/src/partials/faqs/faq_1.html
+++ b/src/partials/faqs/faq_1.html
@@ -7,7 +7,7 @@
         <div class="fqs_info">
           <p>
             Somos ASULADO Seguros de Vida, una filial de SURA Asset Management.
-            Nacimos en diciembre de 2022 para consolidarnos como la Compañía que
+            Nacimos en diciembre de 2022 para consolidarnos como la compañía que
             dinamiza el mercado asegurador en Colombia, donde complementamos la
             oferta de aseguramiento para la etapa de retiro y desacumulación.
           </p>
