--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -21,7 +21,7 @@
                 title="Solicitudes"
                 class="underline text-azul-bold font-bold underline-offset-2"
                 >“Solicitudes”</a
-              >, diligencias tema: certificado o colilla. detalle: certificado
+              >, diligencias tema: certificado o colilla. Detalle: certificado
               de ingresos y retenciones- declaración renta. La respuesta te
               llegará al correo que tienes registrado en nuestra compañía.
             </li>
