--- a/src/partials/gestion/tabs.html
+++ b/src/partials/gestion/tabs.html
@@ -50,7 +50,7 @@
             class="tabs_link"
           >
             <i class="fa-solid fa-graduation-cap"></i>
-            <b>Certificado de escolaridad</b>
+            <b>Certificado de estudio</b>
           </a>
         </li>
         <li class="w-full">
