--- a/src/partials/renta_vitalicia/auxilio.html
+++ b/src/partials/renta_vitalicia/auxilio.html
@@ -738,8 +738,8 @@
             siempre y cuando se cumpla con las condiciones.
           </p>
           <p class="prop_anim">
-            *Sin que el valor de este auxilio sea inferior a cinco (5) salarios
-            mínimos legales mensuales vigentes, ni superior a diez (10) veces
+            *Sin que el valor de este auxilio sea inferior a cinco (5) Salarios
+            Mínimos Legales Mensuales Vigentes, ni superior a diez (10) veces
             dicho salario, a la fecha del fallecimiento del pensionado. Por la
             muerte del (los) beneficiario (s) sobrevivientes de una pensión, no
             se reconocerá auxilio funerario.
