--- a/src/partials/solicitudes/tabs_content.html
+++ b/src/partials/solicitudes/tabs_content.html
@@ -18,8 +18,7 @@
     <p>
       Para registrar la novedad, comunícate con nuestra línea de atención
       nacional <b>01 8000 412 854</b>, en Medellín <b>(604) 402 68 76</b> o por
-      nuestra página web en la sección Solicitudes o Peticiones, siguiendo estos
-      pasos:
+      nuestra página web en la sección "Solicitudes", siguiendo estos pasos:
     </p>
     <ul>
       <li>
