--- a/src/partials/gestion/tabs_content.html
+++ b/src/partials/gestion/tabs_content.html
@@ -18,15 +18,12 @@
     <p>
       Para registrar la novedad, comunícate con nuestra línea de atención
       nacional <b>01 8000 412 854</b>, en Medellín <b>(604) 402 68 76</b> o por
-      nuestra página web en la sección Solicitudes o Peticiones, siguiendo estos
-      pasos:
+      nuestra página web en la sección "Solicitudes", siguiendo estos pasos:
     </p>
     <ul>
       <li>
         Ingresa a la sección de
-        <a class="bt v_azul" target="_blank" href="/solicitudes"
-          >"SOLICITUDES"</a
-        >
+        <a class="bt v_azul" target="_blank" href="/solicitudes">SOLICITUDES</a>
         donde podrás radicar una PQRS con tu solicitud.
       </li>
       <li>
