--- a/src/partials/home/cifras.html
+++ b/src/partials/home/cifras.html
@@ -15,8 +15,8 @@
         </div>
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS3.webp" alt="asulado" />
-          <h4>+<span id="home_cifras_colaboradores"></span></h4>
-          <p>colaboradores en nuestra red</p>
+          <h4><span id="home_cifras_colaboradores"></span><small> biilones</small></h4>
+          <p>AUM (Asset Under Management - Activos Bajo Administración)</p>
         </div>
       </div>
     </div>
