--- a/src/partials/home/cifras.html
+++ b/src/partials/home/cifras.html
@@ -5,20 +5,24 @@
       <div class="as__cifras_content">
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS1.webp" alt="asulado" />
-          <h4><span id="home_cifras_clientes" class="m"></span><small>mil</small></h4>
+          <h4>
+            <span id="home_cifras_clientes" class="m"></span><small>mil</small>
+          </h4>
           <p>clientes de Rentas Vitalicias</p>
         </div>
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS2.webp" alt="asulado" />
           <h4>
-            <span id="home_cifras_cobertura" class="s"></span><small>millones</small>
+            <span id="home_cifras_cobertura" class="s"></span
+            ><small>millones</small>
           </h4>
           <p>de cobertura de afiliados a través del Seguro Previsional</p>
         </div>
         <div class="as__cifras_content_cifra">
           <img src="/assets/images/ILUS3.webp" alt="asulado" />
           <h4>
-            <span id="home_cifras_colaboradores" class="l"></span><small>biilones</small>
+            <span id="home_cifras_colaboradores" class="l"></span
+            ><small>biilones</small>
           </h4>
           <p>AUM (Asset Under Management - Activos Bajo Administración)</p>
         </div>
