ajustes header gobierno

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -57,8 +57,8 @@
                 <i class="fa-duotone fa-circle-arrow-right"></i>
               </a>
             </li>
-            <!-- <li>
-              <a href="/renta_vitalicia" title="Renta Vitalicia">
+            <li>
+              <a href="/gobierno_corporativo" title="Gobierno corporativo">
                 <div class="mega-menu-content">
                   <div class="mm_title">Gobierno corporativo</div>
                   <p>
@@ -69,7 +69,7 @@
                 </div>
                 <i class="fa-duotone fa-circle-arrow-right"></i>
               </a>
-            </li> -->
+            </li>
           </ul>
         </div>
       </li>
