--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1402,7 +1402,7 @@ body {
   }
   .as__section_wrapper {
     .as__g_documentos_tabs_int {
-      @apply bg-white z-0 overflow-hidden rounded-lg p-4;
+      @apply bg-white z-0 overflow-hidden rounded-lg pt-4 px-4 pb-0;
       h2 {
         @apply text-azul-norm font-je font-bold text-3xl my-8;
       }
@@ -1422,10 +1422,10 @@ body {
               @apply select-none pointer-events-none;
             }
             i {
-              @apply transition-colors h-8 w-8 rounded-full text-white bg-azul-bright2 flex justify-center items-center mb-4 duration-500 ease-in-out;
+              @apply transition-colors h-10 w-10 rounded-full text-white bg-azul-bright2 flex justify-center items-center mb-4 duration-500 ease-in-out;
             }
             b {
-              @apply mt-2 font-normal text-base leading-none font-je;
+              @apply mt-2 font-normal text-lg leading-none font-je;
             }
             small {
               @apply text-sm leading-none;
@@ -1955,12 +1955,15 @@ body {
   h2 {
     @apply text-2xl text-azul-bright2 font-je;
   }
+  h3 {
+    @apply text-azul-dark  font-bold text-xl;
+  }
   .gob-list {
     @apply my-8 divide-slate-300 divide-y md:divide-y-0 divide-solid md:divide-x flex flex-col md:flex-row gap-y-4 md:gap-x-4;
     li {
       @apply p-4 flex-1 flex flex-col gap-y-2;
       i.gobi {
-        @apply transition-colors text-lg h-9 w-9 rounded-full text-white bg-azul-bright2 flex justify-center items-center  duration-500 ease-in-out mb-3;
+        @apply transition-colors text-lg h-9 w-9 rounded-full text-white bg-azul-bold flex justify-center items-center  duration-500 ease-in-out mb-3;
       }
       h3 {
         @apply text-azul-norm font-je text-xl font-normal;
@@ -1969,26 +1972,48 @@ body {
         @apply leading-normal text-sm;
       }
     }
+    &.gaccionistas {
+      li {
+        img {
+          @apply !max-w-[260px] w-full;
+        }
+      }
+    }
+  }
+  span.gper {
+    @apply w-20 inline-block text-lg text-azul-norm font-je font-normal py-1 px-2 rounded-2xl bg-BG-8;
+  }
+  .gpert {
+    @apply text-azul-dark font-je text-xl mb-2;
+  }
+  .g-junta {
+    @apply my-2 divide-slate-300 divide-y md:divide-y-0 divide-solid md:divide-x flex flex-col md:flex-row gap-y-4 md:gap-x-4;
+    li {
+      @apply cursor-pointer p-4 flex-1 flex flex-col gap-y-2;
+      h4 {
+        @apply text-azul-dark font-je text-lg font-normal leading-tight;
+      }
+    }
   }
 }
 .as__desc {
   @apply p-8 rounded-xl bg-[#E9F5F8] flex flex-col gap-y-4 mb-8;
   h3 {
-    @apply flex gap-x-4 items-center text-2xl text-azul-norm font-je;
+    @apply flex gap-x-4 items-center text-xl text-azul-norm font-je font-normal;
     i {
-      @apply text-sm transition-colors h-8 w-8 rounded-full text-white bg-azul-mid flex justify-center items-center duration-500 ease-in-out;
+      @apply text-sm transition-colors h-7 w-7 rounded-full text-white bg-azul-mid flex justify-center items-center duration-500 ease-in-out;
     }
   }
   .as__desc_items {
-    @apply flex flex-wrap justify-start items-start;
+    @apply flex flex-wrap justify-start items-stretch;
     .as__desc_item {
-      @apply w-full md:w-auto md:basis-1/2 lg:basis-1/3 2xl:basis-1/4 p-2;
+      @apply flex flex-col items-stretch w-full md:w-auto md:basis-1/2 lg:basis-1/3 2xl:basis-1/4 p-2 h-full;
       a {
-        @apply flex gap-x-4 justify-between w-full items-center text-azul-dark font-light p-4 rounded-lg bg-white border-azul-bright2 border transition-colors hover:bg-azul-light duration-500 ease-in-out;
+        @apply h-full flex gap-x-4 justify-between w-full items-center text-azul-dark font-light p-4 rounded-lg bg-white border-azul-bright2 border transition-colors hover:bg-azul-light duration-500 ease-in-out;
         div {
           @apply grow flex flex-col gap-y-0;
           b {
-            @apply text-azul-norm font-bold text-lg leading-[1em];
+            @apply text-azul-norm font-normal text-lg leading-[1em];
           }
           span {
             @apply text-azul-dark font-light text-sm;
@@ -1997,6 +2022,11 @@ body {
         i.itc {
           @apply flex-none transition-colors h-12 w-12 rounded-full text-azul-bright bg-white flex justify-center items-center duration-500 ease-in-out border border-azul-bright2 text-2xl;
         }
+      }
+    }
+    &.full {
+      .as__desc_item {
+        @apply w-full md:w-auto !basis-full;
       }
     }
   }
@@ -2027,6 +2057,70 @@ body {
       .modal_check {
         @apply pt-4 border-t border-slate-200 text-azul-dark flex gap-x-4 items-center justify-center;
       }
+    }
+  }
+}
+.modal-jd {
+  .modal-box {
+    @apply md:max-w-3xl;
+    .btn-close {
+      @apply btn btn-sm btn-circle w-8 h-8 btn-ghost bg-azul-bright2 text-white absolute right-2 top-2;
+    }
+    .modal_info {
+      @apply flex flex-col md:flex-row gap-4;
+      .modal_info_pic {
+        @apply w-full md:w-4/12 flex flex-col gap-y-2;
+        img {
+          @apply w-full mx-0;
+        }
+        h4 {
+          @apply text-azul-dark font-je text-lg font-normal leading-tight;
+        }
+        p {
+          @apply leading-tight font-light text-azul-dark text-base;
+        }
+      }
+      .modal_info_int {
+        @apply flex flex-col gap-y-4 w-full md:w-8/12;
+        h5 {
+          @apply text-azul-bright2 font-je text-2xl  leading-tight;
+        }
+        h6 {
+          @apply text-azul-dark font-je text-lg font-normal leading-tight;
+        }
+        p,
+        ul {
+          @apply text-azul-dark text-sm text-left leading-tight;
+        }
+        ul {
+          @apply ml-4 flex flex-col gap-y-2 list-disc list-outside;
+        }
+      }
+    }
+  }
+}
+.g-m-sup {
+  @apply flex gap-3 list-disc list-inside;
+  li {
+    @apply text-azul-bold;
+  }
+}
+.g-m-mie {
+  @apply my-2 flex flex-col md:flex-row gap-y-4 md:gap-x-4;
+  .g-m-mie-li {
+    @apply flex flex-col flex-1 p-4 gap-4;
+    h4 {
+      @apply text-azul-dark font-bold;
+    }
+  }
+}
+
+.g-alta {
+  @apply my-2 justify-center divide-slate-300 divide-y md:divide-y-0 divide-solid md:divide-x flex flex-col md:flex-row flex-wrap;
+  li {
+    @apply p-4 flex flex-col gap-y-2 w-full md:w-1/5;
+    h4 {
+      @apply text-azul-dark font-je text-lg font-normal leading-tight;
     }
   }
 }
